--- a/Blog_page.html
+++ b/Blog_page.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <li><a href="Home_page.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Gallery_page.html">Gallery</a></li>
         <li><a href="Blog_page.html">Blog</a></li>
         <li><a href="Contact_page.html">Contact</a></li>
