--- a/Blog_page.html
+++ b/Blog_page.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog page</title>
+    <link rel="stylesheet" href="blog-styl.css">
 </head>
-<body>
-    <nav>
-        <li><a href="Home_page.html">Home</a></li>
-        <li><a href="Gallery_page.html">Gallery</a></li>
-        <li><a href="Blog_page.html">Blog</a></li>
-        <li><a href="Contact_page.html">Contact</a></li>
-    </nav>
+<body class="blog-body">
+    
+    <nav class="blog-styl">
     <article>
         <h2>About Human</h2>
         <p>The largest bone in the human body is the femur. It can support 30 times the weight of a person's body. Ounce for ounce, that's stronger than steel</p>
@@ -24,5 +21,15 @@
         <h2>About Moon</h2>
         <p>The moon changes shapes at different times during the month. These shapes we call the phases of the moon. You will also notice that the moon’s illumination decreases and increases regularly.</p>
     </article>
+    <nav class="navbar">
+        <ul>
+        <a class="home-text" href="index.html">Home</a>
+        <a class="home-text" href="Gallery_page.html">Gallery</a>
+        <a class="home-text" href="Blog_page.html">Blog</a>
+        <a class="home-text" href="Contact_page.html">Contact</a>
+        </ul>
+    </nav>
+    
+    </nav>
 </body>
 </html>
